--- a/finalMVC/appsettings.json
+++ b/finalMVC/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "ConnectionStrings": {
+        "DefaultConnection": "Data Source=aspnet-schoo;Initial Catalog=MyDB;Integrated Security=True"
+        },
   "AllowedHosts": "*"
 }
